--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>pepis</h1>
-    <button>yeap</button>
+
+
+    <p onclick="">Hello pepis</p>
+
+    <script src="js/main.js"></script>
 </body>
-</html>
+</html> 
